[package]
name = "bevy_osc"
version = "0.1.0"
authors = ["Black Phlox <bphlox@gmail.com>"]
edition = "2018"
license = "MIT OR ISC"
readme = "README.md"
repository = "https://github.com/BlackPhlox/bevy_osc"
documentation = "https://docs.rs/bevy_osc"
description = "Send and receive OSC data to and from bevy and other programs or controllers."
keywords = ["gamedev", "bevy", "control", "osc", "logging", "encoding", "data"]
categories = ["game-development", "game-engines", "encoding" ]
exclude = [
    ".github/*",
    "credits/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bevy_osc"

[dependencies]
nannou_osc = "0.16.0"

[dependencies.bevy]
version = "0.5"
default-features = false

[dev-dependencies.bevy]
version = "0.5"
features = ["render", "bevy_winit", "bevy_wgpu", "bevy_gltf"]
default-features = false

[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
version = "0.5"
features = ["x11", "wayland"]
default-features = false